2014-04-10  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c: Do not use newer glib function.

2014-04-07  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Taper_Scribe.pl (set_write_timestamp): Add method.
	* perl/Amanda/Taper/Scan.pm: Fix perl warning.

2014-04-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Tapelist.swg (lookup_by_barcode): New method to return a
	  tle from a barcode.

2014-04-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm (_get_state): Lookupo label in tapelist
	  file if it is not availbale in bc2lb.

2014-04-01  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scan.pm: Do not se the same tape twice in the same
	  run.
	* perl/Amanda/Taper/Scribe.pm: Set taperscan write_timestamp.

2014-03-31  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c (amar_read, set_amar_read_cb): Add a done_cb.
	* amar-src/amar.c (amar_set_error): New function to set an error.
	* amar-src/amar.h: New prototype.
	* amar-src/amarchiver.c: Use NULL done_cb.
	* amar-src/amar-test.c: Pass a NULL done_cb.
	* installcheck/Amanda_Archive.pl: Test set_read_cb with done_cb.
	* perl/Amanda/Archive.swg: Handle done_cb and error.
	* perl/Amanda/MainLoop.swg (run_until_empty): Remove method.

2014-03-28  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c: Stop processing input file on stopped mode.

2014-03-28  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c: Fix memory leak.

2014-03-28  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c (amar_stop_read, amar_start_read): New function.
	* amar-src/amar.h (amar_stop_read, amar_start_read): Add prototype.
	* perl/Amanda/Archive.swg: Swig them.

2014-03-27  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Do not close STDIN and STDERR.

2014-03-27  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c: Add read function that use the mainloop.