@@ -1,4 +1,9 @@
 2014-04-10  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Changer/robot.pm: Fix.
+	* perl/Amanda/Interactivity/email.pm: Try to fix memory leak.
+	* perl/Amanda/ScanInventory.pm: Abort the scan on inventory error.
+
+2014-04-10  Jean-Louis Martineau <martineau@zmanda.com>
 	* amar-src/amar.c: Do not use newer glib function.
 
 2014-04-07  Jean-Louis Martineau <martineau@zmanda.com>
